--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ lto = false
 debug-assertions = true
 codegen-units = 16
 panic = 'unwind'
-incremental = false
+incremental = true
 overflow-checks = true
 
 [profile.bench]
